adição de exercício

--- a/InterfaceMercadoLivre/app/src/main/res/layout/activity_main.xml
+++ b/InterfaceMercadoLivre/app/src/main/res/layout/activity_main.xml
@@ -86,5 +86,6 @@
         android:text="comprar"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:ignore="TouchTargetSizeCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
