--- a/03-app-InterfaceI-ifood/app/src/main/res/values/themes.xml
+++ b/03-app-InterfaceI-ifood/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.InterfaceIfood" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Base.Theme.InterfaceIfood" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
+
+        <!-- Cores Primárias. -->
         <item name="colorPrimary">@color/colorPrimary</item> -->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item> -->
+
     </style>
 
     <style name="Theme.InterfaceIfood" parent="Base.Theme.InterfaceIfood" />
