--- a/AulaThreadsCoroutines/app/src/main/res/layout/activity_main.xml
+++ b/AulaThreadsCoroutines/app/src/main/res/layout/activity_main.xml
@@ -51,12 +51,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="Resultado"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textSize="14sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,8 +78,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Insira o ID"
-            android:padding="3dp"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            tools:ignore="TouchTargetSizeCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
